Reorganized some code and fixed tests. Prevent too many docker containers from running at the same time